build(authentication-application): Add Jjwt Lib