@@ -53,21 +53,7 @@ subprojects {
 		testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.17.1'
 	}
 
-	// javac vm arguments (1)
-	compileJava {
-		options.compilerArgs += ['--enable-preview', '-Amapstruct.defaultComponentModel=spring']
-	}
 
-	// javac vm arguments (2)
-	compileTestJava {
-		options.compilerArgs += ['--enable-preview', '-Amapstruct.defaultComponentModel=spring']
-	}
-
-	// javac vm arguments (3)
-	test {
-		useJUnitPlatform()
-		jvmArgs(['--enable-preview', '-Amapstruct.defaultComponentModel=spring'])
-	}
 
 	// rest docs open api
 	openapi3 {
@@ -79,7 +65,7 @@ subprojects {
 				server = System.getenv('AUTH_SERVER_URL') ?: 'http://localhost:8080'
 				break
 			case 'book-service':
-				server = System.getenv('BOOK_SERVER_URL') ?: 'http://localhost:8080'
+				server = System.getenv('BOOK_SERVER_URL') ?: 'http://localhost:8090'
 				break
 			default:
 				server = 'http://localhost:8080'
@@ -154,6 +140,11 @@ project(':authentication-service:application') {
 		implementation 'org.mapstruct:mapstruct:1.5.3.Final'
 		annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
 		annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+
+		// jwt
+		implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+		implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+		implementation 'io.jsonwebtoken:jjwt-gson:0.11.5'
 	}
 }
 
